Closed Bug 507080 Opened 15 years ago Closed 15 years ago

TM: "Assertion failure: !(sprop->attrs & JSPROP_GETTER), at ../jstracer.cpp"

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: gkw, Assigned: jorendorff)

References

Details

(4 keywords, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

x getter = function (){}
for (z = 0; z < 2; ++z) {
    if (z) {
        x = 0
    }
}

asserts js dbg shell on TM branch with -j at Assertion failure: !(sprop->attrs & JSPROP_GETTER), at ../jstracer.cpp:9445
Flags: blocking1.9.2?
Flags: blocking1.9.2? → blocking1.9.2+
Give you one guess what/whose this is, just based on it being getter/setter-related...
autoBisect tries a cheeky guess at bug 503408 :

The first bad revision is:
changeset:   30696:0184d3d87db9
user:        Jason Orendorff
date:        Mon Jul 27 16:47:34 2009 -0500
summary:     Bug 503408 - Trace native setters. r=brendan.
Blocks: 503408
Keywords: regression
Assignee: general → jorendorff
Oops. Those cases are errors, but they fill the property cache anyway-- the interpreter hasn't noticed the error yet.
Attachment #391612 - Flags: review?(gal)
Comment on attachment 391612 [details] [diff] [review]
v1 - weaken assertion to record-time check

could probably be combined to sprop->attrs & (JSPROP_GETTER|SETTER|READONLY) but its up to you. This way the message is more precise, but also misleading (a read-only getter aborts saying its because its a getter, but it would abort because of read-only too)
Attachment #391612 - Flags: review?(gal) → review+
(In reply to comment #4)
> (From update of attachment 391612 [details] [diff] [review])
> could probably be combined to sprop->attrs & (JSPROP_GETTER|SETTER|READONLY)
> but its up to you. This way the message is more precise, but also misleading (a
> read-only getter aborts saying its because its a getter, but it would abort
> because of read-only too)

Good point, I didn't consider it. But I'll leave it this way. It won't help users much, but I like seeing all the cases in the code. Executable comments.
http://hg.mozilla.org/tracemonkey/rev/1105f304ea8b
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/1105f304ea8b
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Mass change: adding fixed1.9.2 keyword

(This bug was identified as a mozilla1.9.2 blocker which was fixed before the mozilla-1.9.2 repository was branched (August 13th, 2009) as per this query: http://is.gd/2ydcb - if this bug is not actually fixed on mozilla1.9.2, please remove the keyword. Apologies for the bugspam)
Keywords: fixed1.9.2
verified with: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9.2a2pre) Gecko/20090911 Namoroka/3.6a2pre
Keywords: verified1.9.2
Bug in removed tracer code, setting in-testsuite- flag.
Flags: in-testsuite? → in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: