Bug 507080 - TM: "Assertion failure: !(sprop->attrs & JSPROP_GETTER), at ../jstracer.cpp". r=gal.